# server/router/api/v1/instance_service.go
@@ -47,6 +47,8 @@ func (s *APIV1Service) GetInstanceSetting(ctx context.Context, request *v1pb.Get
 		_, err = s.Store.GetInstanceMemoRelatedSetting(ctx)
 	case storepb.InstanceSettingKey_STORAGE:
 		_, err = s.Store.GetInstanceStorageSetting(ctx)
+	case storepb.InstanceSettingKey_AI:
+		_, err = s.Store.GetInstanceAiSetting(ctx)
 	default:
 		return nil, status.Errorf(codes.InvalidArgument, "unsupported instance setting key: %v", instanceSettingKey)
 	}
@@ -119,6 +121,10 @@ func convertInstanceSettingFromStore(setting *storepb.InstanceSetting) *v1pb.Ins
 		instanceSetting.Value = &v1pb.InstanceSetting_MemoRelatedSetting_{
 			MemoRelatedSetting: convertInstanceMemoRelatedSettingFromStore(setting.GetMemoRelatedSetting()),
 		}
+	case *storepb.InstanceSetting_AiSetting:
+		instanceSetting.Value = &v1pb.InstanceSetting_AiSetting_{
+			AiSetting: convertInstanceAiSettingFromStore(setting.GetAiSetting()),
+		}
 	}
 	return instanceSetting
 }
@@ -143,6 +149,10 @@ func convertInstanceSettingToStore(setting *v1pb.InstanceSetting) *storepb.Insta
 	case storepb.InstanceSettingKey_MEMO_RELATED:
 		instanceSetting.Value = &storepb.InstanceSetting_MemoRelatedSetting{
 			MemoRelatedSetting: convertInstanceMemoRelatedSettingToStore(setting.GetMemoRelatedSetting()),
+		}
+	case storepb.InstanceSettingKey_AI:
+		instanceSetting.Value = &storepb.InstanceSetting_AiSetting{
+			AiSetting: convertInstanceAiSettingToStore(setting.GetAiSetting()),
 		}
 	default:
 		// Keep the default GeneralSetting value
@@ -281,6 +291,24 @@ func convertInstanceMemoRelatedSettingToStore(setting *v1pb.InstanceSetting_Memo
 		DisableMarkdownShortcuts: setting.DisableMarkdownShortcuts,
 		EnableBlurNsfwContent:    setting.EnableBlurNsfwContent,
 		NsfwTags:                 setting.NsfwTags,
+	}
+}
+
+func convertInstanceAiSettingFromStore(setting *storepb.InstanceAiSetting) *v1pb.InstanceSetting_AiSetting {
+	if setting == nil {
+		return nil
+	}
+	return &v1pb.InstanceSetting_AiSetting{
+		AiServiceUrl: setting.AiServiceUrl,
+	}
+}
+
+func convertInstanceAiSettingToStore(setting *v1pb.InstanceSetting_AiSetting) *storepb.InstanceAiSetting {
+	if setting == nil {
+		return nil
+	}
+	return &storepb.InstanceAiSetting{
+		AiServiceUrl: setting.AiServiceUrl,
 	}
 }
 
